Compiler/tests/typing/bad/testfile-borrow_mut-1.rs
fn main() { let x = 41; { let y = &mut x; *y = *y + 1; } }
